--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <div class="content">
+  <h1>Open Deploy</h1>
     <p>
       Open source code is a wonderful thing that has increased the transparency, security, and trustworthiness of the software we use every day.
     </p>
